...
            if (response.isSuccessful) {
                Session.user = response.body()?.user
                Session.role = response.body()?.user?.role
                Session.selectedUser = response.body()?.user
                IsAuthResponse(true, response.body()?.user!!, response.code())
            } else {
                throw Exception("Incorrect credentials")
            }
        } catch (e: Exception) {
            Log.e("login", e.message ?: "No exception message available")
            return Resource.Error(message = e.message)
        }
        return Resource.Success(returnValue)
...
