...

    @Composable
    fun ScreenContent() {

        val findUserResult: Resource<List<User>>? by viewModel.findUserResult.observeAsState()

        var input: String by remember {
            mutableStateOf("")
        }

        Column {
            Column(
                modifier = Modifier
...
                    trailingIcon = {
                        Icon(
                            imageVector = Icons.Default.Search,
                            contentDescription = "Search",
                            modifier = Modifier
                                .clickable { viewModel.findUser(input) }
                                .testTag("search")
                        )
                    },
                    isEnabled = true,
                    onValueChange = { value -> input = value }
                )
                Spacer(modifier = Modifier.padding(10.dp))
...
